--- a/src/app/components/characters-selection/CharactersSelection.module.scss
+++ b/src/app/components/characters-selection/CharactersSelection.module.scss
@@ -1,13 +1,80 @@
+@import '../../page.module.scss';
+
+// Animações
+$wave-amplitude: 8px;
+
+@keyframes wave {
+    to {
+        transform: translateY(-#{$wave-amplitude});
+    }
+}
+
+// Estilização principal
 #charactersSelection {
     width: 100%;
     max-height: 100vh;
     overflow-y: scroll;
     background-color: #00000085;
 
-    h2, h4 {
-        text-align: center;
-        color: #fff;
-        font-weight: normal;
+    .charactersHeader {
+        position: sticky;
+        width: 100%;
+        height: 100px;
+        background-color: #1E160F25;
+        backdrop-filter: blur(2px);
+
+        display: flex;
+        justify-content: center;
+        align-items: center;
+        left: 0;
+        top: 0;
+        z-index: 5;
+
+        div {
+            height: 100%;
+            display: flex;
+            flex-direction: column;
+            justify-content: center;
+
+            row-gap: 4px;
+
+            h2 {
+                @include selectCharactersTitle();
+                text-align: center;
+            }
+
+            h4 {
+                @include selectCharactersCaption();
+                text-align: center;
+            }
+        }
+
+        .startDialogueButton {
+            position: absolute;
+            right: 10%;
+            padding: 10px 18px;
+
+            font-family: inherit;
+            font-size: 16px;
+            color: #fff;
+            border: 2px solid #A49573;
+            border-radius: 10px;
+            
+            transition: all 0.3s ease-in;
+            cursor: pointer;
+
+            &:hover {
+                transform: scale(104%);
+            }
+
+            &.allowStart {
+                background-color: #224413;
+            }
+
+            &.notAllowStart {
+                background-color: #932E1F;
+            }
+        }
     }
     
     .cards {
@@ -15,9 +82,37 @@
         grid-template-columns: repeat(2, 1fr);
         justify-items: center;
         row-gap: 14px;
+        margin-top: 14px;
     }
 
     .selected {
         width: 500px;
+    }
+}
+
+// Div da tela de carregamento
+.loadingDiv {
+    width: 100%;
+    height: 100vh;
+    background-color: rgb(0 0 0 / 0.9);
+
+    display: flex;
+    justify-content: center;
+    align-items: center;
+
+    p {
+        @include text-primary();
+        display: inline-block;
+
+        span {
+            display: inline-block;
+            animation: wave 1s infinite alternate;
+        }
+    }
+}
+
+@for $i from 1 through 15 {
+    .loadingDiv p span:nth-child(#{$i}) {
+        animation-delay: #{0.1s * $i};
     }
 }
