--- a/src/app/components/home-page/HomePage.module.scss
+++ b/src/app/components/home-page/HomePage.module.scss
@@ -1,3 +1,5 @@
+@import '../../page.module.scss';
+
 #homePage {
     position: relative;
     width: 100%;
@@ -20,10 +22,12 @@
             align-items: center;
 
             .startButton {
+                @include start-button();
                 margin-top: 20%;
-                padding: 15px 35px;
+                padding: 10px 34px;
                 border-radius: 10px;
                 border: 0;
+                font-family: inherit;
 
                 cursor: pointer;
             }
