fix: fixing deploy error (try 1)

--- a/src/app/components/home-page/HomePage.module.scss
+++ b/src/app/components/home-page/HomePage.module.scss
@@ -54,7 +54,7 @@
             .credits {
                 width: 350px;
                 height: 180px;
-                background-image: (url('../../../../public/assets/images/HomeTextBox.png'));
+                background-image: url('../../../../public/assets/images/HomeTextBox.png');
                 background-repeat: no-repeat;
                 background-position: center;
                 background-size: contain;
