--- a/src/app/components/game-page/gamePage.module.scss
+++ b/src/app/components/game-page/gamePage.module.scss
@@ -30,6 +30,8 @@
 
     display: flex;
     align-items: flex-end;
+    -webkit-tap-highlight-color: transparent;
+    cursor: url('../../../../public/assets/icons/TouchIcon.svg'), pointer;
 
     .characters {
         position: relative;
