--- a/src/app/components/screen-orientation/ScreenOrientation.module.scss
+++ b/src/app/components/screen-orientation/ScreenOrientation.module.scss
@@ -12,10 +12,9 @@
 // Estilização principal
 
 .screenOrientation {
-    width: 100%;
-    height: 100vh;
-
     position: relative;
+    width: 100%;
+    height: 100lvh;
     background-color: #fff;
 
     display: flex;
