--- a/src/app/components/select-language/SelectLanguage.module.scss
+++ b/src/app/components/select-language/SelectLanguage.module.scss
@@ -3,7 +3,7 @@
 #selectLanguage {
     position: fixed;
     width: 100%;
-    height: 100%;
+    height: 100lvh;
     left: 0;
     top: 0;
 
@@ -11,7 +11,7 @@
     justify-content: center;
     align-items: center;
     background-color: rgb(0 0 0 / 0.75);
-    z-index: 999;
+    z-index: 7;
 
     .languagesContainer {
         position: relative;
